k8s/sample-app/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  namespace: sample-app
spec:
  type: ClusterIP
  selector:
    app: sample-app
  ports:
    - port: 80
      targetPort: 80
